# Image-Background-Remover

./: .dockerignore  .env.example  .gitignore  .replit  Dockerfile  README.md  pyproject.toml  render.yaml
backend/: main.py  requirements.txt
frontend/: index.html  package-lock.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: Footer.css  Footer.jsx  Header.css  Header.jsx  Marketplace.css  Marketplace.jsx  ModelSelector.css  ModelSelector.jsx  ResultPanel.css  ResultPanel.jsx  UploadZone.css  UploadZone.jsx
