[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.136.3",
    "pillow>=12.2.0",
    "python-multipart>=0.0.29",
    "rembg>=2.0.75",
    "uvicorn[standard]>=0.48.0",
]
